--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/styles.css">
-  <title>Custom checkbox</title>
+  <title>DZ | Custom checkbox</title>
 </head>
-<body>
-  test
+<body style="padding: 0; margin: 0; display: flex; justify-content: center; align-items: center; width: 100%; height: 100vh;">
+
+  <!-- Checkbox -->
+  <div class="Checkbox" id="checkbox">
+    <input type="checkbox" class="Checkbox__input" id="input">
+
+    <div class="Checkbox__checkbox">
+      <span class="Checkbox__fill" id="checkboxFill"></span>
+    </div>
+
+    <span class="Checkbox__text">Checkbox</span>
+  </div>
+  <!-- Checkbox -->
 
   <script src="./JS/index.js"></script>
 </body>
