Improved code and add checked status default

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Checkbox -->
   <div class="Checkbox" id="checkbox">
-    <input type="checkbox" class="Checkbox__input" id="input">
+    <input type="checkbox" class="Checkbox__input" id="input" checked>
 
     <div class="Checkbox__checkbox">
       <span class="Checkbox__fill" id="checkboxFill"></span>
