Changed checkboxes` id

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="padding: 0; margin: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100vh;">
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="checkbox" data-checked="true">
+  <div class="Checkbox" id="firstCheckbox" data-checked="true">
     <input type="checkbox" class="Checkbox__input">
 
     <div class="Checkbox__checkbox">
@@ -26,7 +26,7 @@
   <!-- Separator -->
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="checkbox2">
+  <div class="Checkbox" id="lastCheckbox">
     <input type="checkbox" class="Checkbox__input">
 
     <div class="Checkbox__checkbox">
