Removed data-checked attribute from checkboxes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body style="padding: 0; margin: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100vh;">
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="firstCheckbox" data-checked="true">
-    <input type="checkbox" class="Checkbox__input">
+  <div class="Checkbox" id="firstCheckbox">
+    <input type="checkbox" class="Checkbox__input" checked>
 
     <div class="Checkbox__checkbox">
       <span class="Checkbox__fill" data-id="checkboxInput"></span>
