Refactored id attributes to data-id attributes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <!-- Checkbox -->
   <div class="Checkbox" id="firstCheckbox">
-    <input type="checkbox" class="Checkbox__input" checked>
+    <input type="checkbox" class="Checkbox__input" data-id="dz-input" checked>
 
     <div class="Checkbox__checkbox">
-      <span class="Checkbox__fill" data-id="checkboxInput"></span>
+      <span class="Checkbox__fill" data-id="dz-checkboxInput"></span>
     </div>
 
     <span class="Checkbox__text">Checkbox</span>
@@ -27,10 +27,10 @@
 
   <!-- Checkbox -->
   <div class="Checkbox" id="lastCheckbox">
-    <input type="checkbox" class="Checkbox__input">
+    <input type="checkbox" class="Checkbox__input" data-id="dz-input">
 
     <div class="Checkbox__checkbox">
-      <span class="Checkbox__fill" data-id="checkboxInput"></span>
+      <span class="Checkbox__fill" data-id="dz-checkboxInput"></span>
     </div>
 
     <span class="Checkbox__text">Checkbox</span>
