Refactored component name to data-name attribute

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="padding: 0; margin: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100vh;">
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="firstCheckbox">
+  <div class="Checkbox" id="firstCheckbox" data-name="First Checkbox">
     <input type="checkbox" class="Checkbox__input" data-id="dz-input" checked>
 
     <div class="Checkbox__checkbox">
