--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="padding: 0; margin: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100vh;">
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="firstCheckbox" data-name="First Checkbox">
+  <label class="Checkbox" id="firstCheckbox" data-name="First Checkbox">
     <input type="checkbox" class="Checkbox__input" data-id="dz-input" checked>
 
     <div class="Checkbox__checkbox">
@@ -18,7 +18,7 @@
     </div>
 
     <span class="Checkbox__text">Checkbox</span>
-  </div>
+  </label>
   <!-- Checkbox -->
 
   <!-- Separator -->
@@ -26,7 +26,7 @@
   <!-- Separator -->
 
   <!-- Checkbox -->
-  <div class="Checkbox" id="lastCheckbox">
+  <label class="Checkbox" id="lastCheckbox">
     <input type="checkbox" class="Checkbox__input" data-id="dz-input">
 
     <div class="Checkbox__checkbox">
@@ -34,7 +34,7 @@
     </div>
 
     <span class="Checkbox__text">Checkbox</span>
-  </div>
+  </label>
   <!-- Checkbox -->
 
   <script src="./JS/Checkbox.js"></script>
